# gym_xarmlite6

./: .gitignore  collect_scripted_paths.py  pyproject.toml  requirements.txt
gym_lite6/: env.py  model.py  scripted_policy.py
gym_xarmlite6/: __init__.py  model.py  scripted_policy.py
gym_xarmlite6/models/: lite6_gripper.xml  lite6_gripper_wide.xml  scene.xml
models/: lite6_gripper.xml  lite6_gripper_wide.xml
tests/: pickup_task_test.py  test_env.py
