[project]
name = "gym_lite6"
version = "0.0.1"
description = "gym environment for UFactory Lite6 robot arm in MuJoCo"
requires-python = ">=3.10"
license = { text = "MIT License" }
dependencies = [
    "numpy<2.0.0",
    "scipy==1.2.0",
    "mujoco==3.2.7",
    "gymnasium",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
