[project]
name = "gym_xarmlite6"
version = "0.0.1"
description = "gym environment for UFactory Lite6 robot arm in MuJoCo"
requires-python = ">=3.10"
license = { text = "MIT License" }
dependencies = [
    "numpy",
    "scipy",
    "mujoco>=3.5.0",
    "gymnasium",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
